added node index config param

--- a/html_pages/moods_event.html
+++ b/html_pages/moods_event.html
@@ -400,8 +400,10 @@
                                                     <span class="day">13</span>
                                                     <span class="day_name">Mo</span>
                                                     <span class="month_name">Dec</span>
-                                                </span><span class="time">Doors: 19:30</span><span class="time">Start:
-                                                    20:30</span><span class="ticket-price">Price <span data-price="30"
+                                                </span>
+                                                <span class="time">Doors: 19:30</span>
+                                                <span class="time">Start: 20:30</span>
+                                                <span class="ticket-price">Price <span data-price="30"
                                                         class="price"><span class="value">30.-</span> <span
                                                             class="currency">CHF</span></span></span>
                                                 <h3>Tickets</h3>
